<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_top"
    tools:context=".Screen.Register">

    <LinearLayout
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="363dp"
                android:layout_height="85dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="14dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="34dp"
                android:src="@drawable/sidigi" />

            <LinearLayout
                android:layout_marginLeft="20dp"
                android:layout_marginTop="225dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textColor="#ffffff"
                    android:textSize="30dp"
                    android:fontFamily="@font/pml"
                    android:text="@string/welcome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textColor="#ffffff"
                    android:textSize="14sp"
                    android:layout_marginTop="-5dp"
                    android:fontFamily="@font/pl"
                    android:text="@string/header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>


            <androidx.cardview.widget.CardView
                android:id="@+id/cardHeader1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="550dp"
                android:layout_marginTop="330dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                app:cardCornerRadius="20dp"
                app:cardElevation="7dp"
                app:cardMaxElevation="@dimen/cardview_default_elevation">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="400dp">


                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/pp"
                    android:text="@string/daftar"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="30dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="70dp"
                    android:layout_marginRight="20dp"
                    android:orientation="vertical">



                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp">

                        <EditText
                            android:id="@+id/nama"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/pl"
                            android:hint="@string/nama"
                            android:inputType="textPersonName" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp">

                        <EditText
                            android:id="@+id/alamat"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:fontFamily="@font/pl"
                            android:hint="@string/alamat"
                            android:textColor="@color/teksindex"
                            android:textColorHint="@color/teksmenu" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp">

                        <EditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:fontFamily="@font/pl"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/teksindex"
                            android:textColorHint="@color/teksmenu" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp">

                        <EditText
                            android:id="@+id/no"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:fontFamily="@font/pl"
                            android:hint="No. HP"
                            android:inputType="number"
                            android:textColor="@color/teksindex"
                            android:textColorHint="@color/teksmenu" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <LinearLayout
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:textSize="16dp"
                            android:layout_width="90dp"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:fontFamily="@font/pp"
                            android:hint="@string/siapa"
                            android:textColor="@color/teksindex" />

                        <Spinner
                            android:id="@+id/provider"
                            android:gravity="left"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:fontFamily="@font/pp"
                            android:textColor="@color/teksindex"
                            android:textColorHint="@color/teksmenu" />

                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp">

                        <EditText
                            android:id="@+id/password"
                            android:ems="10"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/pl"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:textColor="@color/teksindex"
                            android:textColorHint="@color/teksmenu" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp">

                        <EditText
                            android:id="@+id/repassword"
                            android:ems="10"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/pl"
                            android:hint="@string/repassword"
                            android:inputType="textPassword"
                            android:textColor="@color/teksindex"
                            android:textColorHint="@color/teksmenu" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <Button
                        android:id="@+id/btn_reg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_background"
                        android:fontFamily="@font/pp"
                        android:text="@string/register"
                        android:textColor="@color/colorWhite"
                        android:textSize="20dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sudah"
                            android:fontFamily="@font/pp"
                            android:textAlignment="center"
                            android:textSize="14dp" />

                        <TextView
                            android:layout_marginLeft="5dp"
                            android:id="@+id/login"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/pl"
                            android:text="Login"
                            android:textAlignment="center"
                            android:textSize="14dp" />
                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>