<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_top"
    tools:context=".Screen.Login">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="363dp"
            android:layout_height="85dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="14dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="34dp"
            android:src="@drawable/sidigi" />

        <LinearLayout
            android:layout_marginLeft="20dp"
            android:layout_marginTop="225dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="#ffffff"
                android:textSize="30dp"
                android:fontFamily="@font/pml"
                android:text="@string/welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:textColor="#ffffff"
                android:textSize="14sp"
                android:layout_marginTop="-5dp"
                android:fontFamily="@font/pl"
                android:text="@string/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />



        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:layout_marginTop="330dp"
            android:id="@+id/cardHeader1"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            app:cardCornerRadius="20dp"
            app:cardElevation="7dp"
            app:cardMaxElevation="@dimen/cardview_default_elevation">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="400dp">


            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:fontFamily="@font/pp"
                android:layout_marginTop="10dp"
                android:textSize="25dp"
                android:textAlignment="center"
                android:text="@string/login"
                android:textColor="@color/colorBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="50dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:hint="@string/email"
                    android:fontFamily="@font/robotol"
                    android:textColor="@color/colorText"
                    android:textColorHint="@color/colorText"
                    android:padding="@dimen/activity_vertical_margin" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:hint="@string/password"
                    android:fontFamily="@font/robotol"
                    android:textColor="@color/colorText"
                    android:textColorHint="@color/colorText"
                    android:padding="@dimen/activity_vertical_margin"
                    android:layout_marginBottom="10dp" />

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_background"
                    android:fontFamily="@font/pp"
                    android:text="Login"
                    android:textColor="@color/colorWhite"
                    android:textSize="20dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sudah"
                        android:textAlignment="center"
                        android:textSize="14dp" />

                    <TextView
                        android:layout_marginLeft="10dp"
                        android:id="@+id/regis"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/robotob"
                        android:text="Registrasi"
                        android:textAlignment="center"
                        android:textSize="14dp" />
                </LinearLayout>

            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>