<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorbg"
    tools:context=".Screen.Tentang">


    <LinearLayout
        android:layout_marginBottom="11dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_marginTop="-5dp"
            android:id="@+id/relativeLayout"
            android:layout_width="wrap_content"
            android:background="@drawable/icbg"
            android:layout_height="300dp"
            tools:ignore="MissingConstraints">

            <RelativeLayout
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints">

                <ImageView
                    android:id="@+id/kembali"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/icback"></ImageView>

                <TextView
                    android:layout_marginLeft="80dp"
                    android:layout_marginTop="23dp"
                    android:textColor="#ffffff"
                    android:textSize="25dp"
                    android:fontFamily="@font/pp"
                    android:text="@string/menutujuan"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />


            </RelativeLayout>
        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <!--        <include-->
            <!--            android:id="@+id/edit"-->
            <!--            layout="@layout/dataactivity"-->
            <!--            tools:layout_editor_absoluteX="0dp"-->
            <!--            tools:layout_editor_absoluteY="0dp" />-->

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:id="@+id/tujuansd"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/pp"
                    android:text="@string/tujuansd"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/isiprofilsd2"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/pl"
                    android:text="@string/isiprofilsd2"
                    android:textSize="14sp">

                </TextView>
            </LinearLayout>


        </androidx.core.widget.NestedScrollView>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>